[FIX] Fixing overlapping on menu in cover section and about section

--- a/estilos.css
+++ b/estilos.css
@@ -125,7 +125,7 @@ body {
 }
 
 .cover .cover__desc {
-	padding: 15px;
+	padding: 10px;
 	align-self: center;
 	background-color: rgba(21, 20, 49, 80%);
 	color: var(--light-color);
@@ -197,32 +197,31 @@ body {
 	display: flex;
 	flex-direction: column;	
 	justify-content: center;
-	position: relative;
+	/* position: relative; */
 }
 
 .about__desciption {
-	background-color: rgba(21, 20, 49, 70%);
-	border-radius: 5px;
-	padding: 15px;
-	width: 100%;
-	color: var(--light-color);
-	font-size: 2rem;
-	line-height: 2.5rem;
-	border-radius: 20px;
 	position: relative;
+  /* background: var(--primary-color); */
+	background-color: rgba(21, 20, 49, 80%);
+	border-radius: 5px;
+	padding: 10px;
+	width: 100%;
+	border-radius: 20px;
 	overflow: hidden;
 }
 
-/*.about__desciption::before {
+/* .about__desciption::before {
 	content: '';
   position: absolute;
-  width: 140px;
-	top: -20%; /* 50% - (height / 2) 
-	left: calc(50% - 70px);
-  height: 140%;
-  background: linear-gradient(to bottom, var(--light-color), var(--light-color), var(--highlight-color), var(--highlight-color));
+  width: 140%;
+	left: -20%; /* 50% - (height / 2) 
+	top: calc(50% - 70px);
+  height: 140px;
+  background: linear-gradient(to right, var(--light-color), var(--light-color), var(--highlight-color), var(--highlight-color));
   animation: animate 10s linear infinite;
-}*/
+	z-index: 0;
+} */
 
 /* .about__desciption::after {
 	content: '';
@@ -236,6 +235,9 @@ body {
 
 .about__desciption p {
 	z-index: 10;
+	color: var(--light-color);
+	font-size: 2rem;
+	line-height: 2.5rem;
 }
 
 .about span {
@@ -719,7 +721,7 @@ footer .navbar {
 	}
 
 	.cover {
-		flex-direction: column;
+		flex-direction: column-reverse;
 		justify-content: space-between;
 		height: 100vh;
 		padding: 0;
@@ -736,7 +738,7 @@ footer .navbar {
 	}
 
 	.cover .cover-boton {
-		margin-bottom: 30px;
+		/* margin-bottom: 30px; */
 	}
 
 	aside {
